--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -19081,6 +19081,25 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Dialogue.FrostwolfDialogueSetup.Setup
   nameWithType: FrostwolfDialogueSetup.Setup
+- uid: WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup
+  name: GoblinDialogueSetup
+  href: api-source/WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup.html
+  commentId: T:WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup
+  fullName: WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup
+  nameWithType: GoblinDialogueSetup
+- uid: WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup.Setup
+  name: Setup()
+  href: api-source/WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup.html#WarcraftLegacies_Source_Dialogue_GoblinDialogueSetup_Setup
+  commentId: M:WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup.Setup
+  fullName: WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup.Setup()
+  nameWithType: GoblinDialogueSetup.Setup()
+- uid: WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup.Setup*
+  name: Setup
+  href: api-source/WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup.html#WarcraftLegacies_Source_Dialogue_GoblinDialogueSetup_Setup_
+  commentId: Overload:WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup.Setup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Dialogue.GoblinDialogueSetup.Setup
+  nameWithType: GoblinDialogueSetup.Setup
 - uid: WarcraftLegacies.Source.Dialogue.IllidariDialogueSetup
   name: IllidariDialogueSetup
   href: api-source/WarcraftLegacies.Source.Dialogue.IllidariDialogueSetup.html
