--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -19119,6 +19119,25 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Dialogue.IllidariDialogueSetup.Setup
   nameWithType: IllidariDialogueSetup.Setup
+- uid: WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup
+  name: KultirasDialogueSetup
+  href: api-source/WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup.html
+  commentId: T:WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup
+  fullName: WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup
+  nameWithType: KultirasDialogueSetup
+- uid: WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup.Setup
+  name: Setup()
+  href: api-source/WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup.html#WarcraftLegacies_Source_Dialogue_KultirasDialogueSetup_Setup
+  commentId: M:WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup.Setup
+  fullName: WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup.Setup()
+  nameWithType: KultirasDialogueSetup.Setup()
+- uid: WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup.Setup*
+  name: Setup
+  href: api-source/WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup.html#WarcraftLegacies_Source_Dialogue_KultirasDialogueSetup_Setup_
+  commentId: Overload:WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup.Setup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Dialogue.KultirasDialogueSetup.Setup
+  nameWithType: KultirasDialogueSetup.Setup
 - uid: WarcraftLegacies.Source.Dialogue.LegionDialogueSeup
   name: LegionDialogueSeup
   href: api-source/WarcraftLegacies.Source.Dialogue.LegionDialogueSeup.html
